--- a/src/pf_adr/package.xml
+++ b/src/pf_adr/package.xml
@@ -14,6 +14,10 @@
   <exec_depend>tf_transformations</exec_depend>
   <exec_depend>numpy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>sjtu_drone_control</exec_depend>
+  <exec_depend>sjtu_drone_description</exec_depend>
+  <exec_depend>sjtu_drone_bringup</exec_depend>
+
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
